Updating delete collection API call
